--- a/personal.html
+++ b/personal.html
@@ -6,34 +6,34 @@
 <!-- Latest compiled and minified CSS -->
 
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-      <link href"css/personal.css" rel="stylesheet"type="text/css">
+      <link href="css/personal.css" rel="stylesheet"type="text/css">
       <link href='https://fonts.googleapis.com/css?family=Raleway:400,800' rel='stylesheet' type='text/css'>
     </head>
 
 
 <!---- Navigation Bar ------>
-    <header class="nav navigation-bar">
-      <ul class="nav nav-pills pull right">
-        <li role="presentation" class="active"><a href="#">Education</a></li>
+    <header class="page-header">
+      <ul class="nav nav-pills pull-right" id="nav">
+        <li role="presentation"><a href="#">Education</a></li>
         <li role="presentation"><a href="#">Experience</a></li>
         <li role="presentation"><a href="#">Reason</a></li>
         <li role="presentation"><a href="#">Hobbies</a></li>
       </ul>
-      <div class="clear"></div>
-      <h1 class="name">Connor Cummings</h1>
+
     </header>
 <!---- CONTENT AND MEAT OF THE PAGE ------------------------------------------->
 
   <div class="container"
 
 <!---- Page About Me Section ------>
-
-      <h1>About me</h1>
-
+    <div class="jumbotron">
+      <h1 class="name">Connor Cummings</h1>
+      <img src="images/1.jpg">
+    </div>
 <!---- SECTION ABOUT ED AND WORK ------------------------------------>
 <!---- Education ------------------>
     <div class"row">
-      <div class="col-md-6">
+      <div class="col-md-4" id="education">
         <h3>Education</h3>
           <ul>
             <li>Portland Community College</li>
@@ -43,57 +43,67 @@
           </ul>
       </div>
 <!---- Job Experience ------------------>
-      <div class="col-md-6">
+      <div class="col-md-4" id="job-experience">
         <h3>Job Experience</h3>
           <ul>
-            <li>City of Hillsboro</li>
+            <li>City of Hillsboro: program director</li>
+            <li>City of Hillsboro: site supervisor</li>
+
           </ul>
       </div>
+<!---- Projects ----------------------->
+      <div class="col-md-4" id="projects">
+        <h3>Projects</h3>
+        <ul>
+          <li><a href="#">workpage</a></li>
+          <li><a href="#">workpage</a></li>
+          <li><a href="#">workpage</a></li>
+        </ul>
+      </div>
+
     </div>
 <!----- Section ED AND WORK ENDS ------------------------------------>
 
 <!---- Why Code?  ------------------>
 
-    <div class="row">
+    <div class="row" id="why-code">
       <div class="col-md-12">
           <h3>Why Code?</h3>
-          <ul>
-            <li>Allows me to be creative</li>
-            <li>It's an ever evovling field</li>
-            <li>Challenging</li>
-            <li>Rewarding</li>
-          </ul>
+          <p>Simply put, coding has it all... I enjoy that coding allows me to be expressive with my ideas and creative with my artistic ability. Its a career in a field that forever evolves.
       </div>
     </div>
 
 <!---- Hobbies ------------------>
-      <div class="hobbies">
-        <div class="row">
-          <div class="col-md-12">
-            <h3>Hobbies</h3>
-                <ul>
-                  <li><img src="#"></li>
-                  <li><img src="#"></li>
-                  <li><img src="#"></li>
-                  <li><img src="#"></li>
-                </ul>
-          </div>
-        </div>
+
+    <div class="row" id="hobbies">
+      <div class="col-md-12">
+        <h3>Hobbies</h3>
+          <ul>
+            <li><img src="images/1.jpg"></li>
+            <li><img src="images/2.jpg"></li>
+            <li><img src="images/3.jpg"></li>
+            <li><img src="images/1.jpg"></li>
+          </ul>
+      </div>
+    </div>
       </div>
 <!---- Link to work examples ------>
-      <div class="projects">
-        <div class="row">
-          <div class="col-md-2">
-            <h3>Projects</h3>
-            <ul>
-              <li><a href="#">workpage</a></li>
-              <li><a href="#">workpage</a></li>
-              <li><a href="#">workpage</a></li>
-            </ul>
-          </div>
-        </div>
-      </div>
 
+    <div class="row" id="projects">
+      <div class="col-md-2">
+        <h3>Projects</h3>
+        <ul>
+          <li><a href="#">workpage</a></li>
+          <li><a href="#">workpage</a></li>
+          <li><a href="#">workpage</a></li>
+        </ul>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-12" id = "banner">
+        <h1>Connor</h1>
+      </div>
+    </div>
 <!---- CONTENT END - END OF THE PAGE ------------------------------------------>
 
   </div> <!---this div ends the container ----->
