--- a/personal.html
+++ b/personal.html
@@ -14,10 +14,10 @@
 <!---- Navigation Bar ------>
     <header class="page-header">
       <ul class="nav nav-pills pull-right" id="nav">
-        <li role="presentation"><a href="#">Education</a></li>
-        <li role="presentation"><a href="#">Experience</a></li>
-        <li role="presentation"><a href="#">Reason</a></li>
-        <li role="presentation"><a href="#">Hobbies</a></li>
+        <li role="presentation"><a href="education">Education</a></li>
+        <li role="presentation"><a href="job-experience">Experience</a></li>
+        <li role="presentation"><a href="why-code">Reason</a></li>
+        <li role="presentation"><a href="hobbies">Hobbies</a></li>
       </ul>
 
     </header>
@@ -27,13 +27,14 @@
 
 <!---- Page About Me Section ------>
     <div class="jumbotron">
-      <h1 class="name">Connor Cummings</h1>
       <img src="images/1.jpg">
+      <h1>Connor Cummings</h1>
     </div>
+
 <!---- SECTION ABOUT ED AND WORK ------------------------------------>
 <!---- Education ------------------>
     <div class"row">
-      <div class="col-md-4" id="education">
+      <div class="col-lg-4" id="education">
         <h3>Education</h3>
           <ul>
             <li>Portland Community College</li>
@@ -43,7 +44,7 @@
           </ul>
       </div>
 <!---- Job Experience ------------------>
-      <div class="col-md-4" id="job-experience">
+      <div class="col-lg-4" id="job-experience">
         <h3>Job Experience</h3>
           <ul>
             <li>City of Hillsboro: program director</li>
@@ -52,12 +53,12 @@
           </ul>
       </div>
 <!---- Projects ----------------------->
-      <div class="col-md-4" id="projects">
+      <div class="col-lg-4" id="projects">
         <h3>Projects</h3>
         <ul>
-          <li><a href="#">workpage</a></li>
-          <li><a href="#">workpage</a></li>
-          <li><a href="#">workpage</a></li>
+          <li><a href="https://github.com/oregonized44/hello-world">Hello World</a></li>
+          <li><a href="https://github.com/oregonized44/gitSquared">Git Squared</a></li>
+          <li><a href="https://github.com/oregonized44/voteTracker">Vote Tracker</a></li>
         </ul>
       </div>
 
@@ -67,7 +68,7 @@
 <!---- Why Code?  ------------------>
 
     <div class="row" id="why-code">
-      <div class="col-md-12">
+      <div class="col-lg-12">
           <h3>Why Code?</h3>
           <p>Simply put, coding has it all... I enjoy that coding allows me to be expressive with my ideas and creative with my artistic ability. Its a career in a field that forever evolves.
       </div>
@@ -76,39 +77,29 @@
 <!---- Hobbies ------------------>
 
     <div class="row" id="hobbies">
-      <div class="col-md-12">
+      <div class="col-lg-12">
         <h3>Hobbies</h3>
           <ul>
-            <li><img src="images/1.jpg"></li>
-            <li><img src="images/2.jpg"></li>
-            <li><img src="images/3.jpg"></li>
-            <li><img src="images/1.jpg"></li>
+            <li class="image"><img src="images/1.jpg"></li>
+            <li>Art</li>
+            <li class="image"><img src="images/2.jpg"></li>
+            <li>Music</li>
+            <li class="image"><img src="images/3.jpg"></li>
+            <li>Mountaineering</li>
+            <li class="image"><img src="images/1.jpg"></li>
+            <li>Culture</li>
           </ul>
       </div>
     </div>
       </div>
-<!---- Link to work examples ------>
 
-    <div class="row" id="projects">
-      <div class="col-md-2">
-        <h3>Projects</h3>
-        <ul>
-          <li><a href="#">workpage</a></li>
-          <li><a href="#">workpage</a></li>
-          <li><a href="#">workpage</a></li>
-        </ul>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-md-12" id = "banner">
-        <h1>Connor</h1>
-      </div>
-    </div>
+
+
+
 <!---- CONTENT END - END OF THE PAGE ------------------------------------------>
 
   </div> <!---this div ends the container ----->
   <footer>
-      <!-- Latest compiled and minified JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-    </footer>
+      <!----- APPARENTLY THE BOOTSTRAP MIN JS SUPPLIED IS BROKEN-->
+  </footer>
   </body>
