add minimal changes

--- a/personal.html
+++ b/personal.html
@@ -14,10 +14,10 @@
 <!---- Navigation Bar ------>
     <header class="page-header">
       <ul class="nav nav-pills pull-right" id="nav">
-        <li role="presentation"><a href="education">Education</a></li>
-        <li role="presentation"><a href="job-experience">Experience</a></li>
-        <li role="presentation"><a href="why-code">Reason</a></li>
-        <li role="presentation"><a href="hobbies">Hobbies</a></li>
+        <li role="presentation"><a href="#education">Education</a></li>
+        <li role="presentation"><a href="#job-experience">Experience</a></li>
+        <li role="presentation"><a href="#why-code">Reason</a></li>
+        <li role="presentation"><a href="#hobbies">Hobbies</a></li>
       </ul>
 
     </header>
@@ -35,7 +35,7 @@
 <!---- Education ------------------>
     <div class"row">
       <div class="col-lg-4" id="education">
-        <h3>Education</h3>
+        <h2><a name="education">Education</a></h2>
           <ul>
             <li>Portland Community College</li>
             <li>RCC/Southern Oregon university</li>
@@ -45,7 +45,7 @@
       </div>
 <!---- Job Experience ------------------>
       <div class="col-lg-4" id="job-experience">
-        <h3>Job Experience</h3>
+        <h2><a name="job-experience">Job Experience</a></h2>
           <ul>
             <li>City of Hillsboro: program director</li>
             <li>City of Hillsboro: site supervisor</li>
@@ -54,11 +54,11 @@
       </div>
 <!---- Projects ----------------------->
       <div class="col-lg-4" id="projects">
-        <h3>Projects</h3>
+        <h2><a name="job-experience">Projects</a></h2>
         <ul>
-          <li><a href="https://github.com/oregonized44/hello-world">Hello World</a></li>
-          <li><a href="https://github.com/oregonized44/gitSquared">Git Squared</a></li>
-          <li><a href="https://github.com/oregonized44/voteTracker">Vote Tracker</a></li>
+          <li><a href="https://github.com/oregonized44/hello-world">Hello World (HTML)</a></li>
+          <li><a href="https://github.com/oregonized44/gitSquared">Git Squared (HTML CSS JS)</a></li>
+          <li><a href="https://github.com/oregonized44/voteTracker">Vote Tracker (JS)</a></li>
         </ul>
       </div>
 
@@ -69,7 +69,7 @@
 
     <div class="row" id="why-code">
       <div class="col-lg-12">
-          <h3>Why Code?</h3>
+          <h2><a name="why-code">Why Code?</a></h2>
           <p>Simply put, coding has it all... I enjoy that coding allows me to be expressive with my ideas and creative with my artistic ability. Its a career in a field that forever evolves.
       </div>
     </div>
@@ -78,15 +78,13 @@
 
     <div class="row" id="hobbies">
       <div class="col-lg-12">
-        <h3>Hobbies</h3>
+        <h2><a name="hobbies">Hobbies</a></h2>
           <ul>
             <li class="image"><img src="images/1.jpg"></li>
             <li>Art</li>
             <li class="image"><img src="images/2.jpg"></li>
             <li>Music</li>
             <li class="image"><img src="images/3.jpg"></li>
-            <li>Mountaineering</li>
-            <li class="image"><img src="images/1.jpg"></li>
             <li>Culture</li>
           </ul>
       </div>
