add emphasis and strong tag

--- a/personal.html
+++ b/personal.html
@@ -47,8 +47,8 @@
       <div class="col-lg-4" id="job-experience">
         <h2><a name="job-experience">Job Experience</a></h2>
           <ul>
-            <li>City of Hillsboro: program director</li>
-            <li>City of Hillsboro: site supervisor</li>
+            <li>City of Hillsboro: <em>program director</em></li>
+            <li>City of Hillsboro: <em>site supervisor</em></li>
 
           </ul>
       </div>
@@ -70,7 +70,7 @@
     <div class="row" id="why-code">
       <div class="col-lg-12">
           <h2><a name="why-code">Why Code?</a></h2>
-          <p>Simply put, coding has it all... I enjoy that coding allows me to be expressive with my ideas and creative with my artistic ability. Its a career in a field that forever evolves.
+          <p>Simply put, coding has it all... I enjoy that coding allows me to be both <strong>expressive</strong> with my ideas and <strong>creative</strong> with my artistic ability. Its a career in a field that forever evolves.
       </div>
     </div>
 
